--- a/test/test.browser.html
+++ b/test/test.browser.html
@@ -12,27 +12,21 @@
     <script>
         try {
             const db = window.SimplestDB.create({
-                schema: "SimplestDB--Functional-kernel@1.0.0",
+                schema: "ejemplo_de_base_de_datos",
                 tables: {
                     fichero: {
                     columns: {
-                            ruta: {
-                                is_type: "string"
-                            }
+                            ruta: { is_type: "string" }
                         }
                     },
                     ejecutable: {
                     columns: {
-                            ruta: {
-                                is_type: "string"
-                            }
+                            ruta: { is_type: "string" }
                         }
                     },
                     cache: {
                     columns: {
-                            ruta: {
-                                is_type: "string"
-                            }
+                            ruta: { is_type: "string" }
                         }
                     }
                 }
@@ -46,6 +40,30 @@
             db.delete("fichero", id1);
             db.delete("fichero", id2);
             db.delete("fichero", id3);
+            const SimplestCache = SimplestDB.getCache();
+            const SimplestFS = SimplestDB.getFS();
+            const cacheId1 = SimplestCache.insert("cache", { key: "one", value: "1" });
+            const cacheId2 = SimplestCache.insert("cache", { key: "two", value: "2" });
+            const cacheId3 = SimplestCache.insert("cache", { key: "three", value: "3" });
+            const fsId4 = SimplestFS.insert("fs", { key: "/one.txt", value: "1" });
+            const fsId5 = SimplestFS.insert("fs", { key: "/two.txt", value: "2" });
+            const fsId6 = SimplestFS.insert("fs", { key: "/three.txt", value: "3" });
+            SimplestCache.update("cache", cacheId1, { value: "1++" });
+            SimplestFS.update("fs", fsId4, { value: "1++" });
+            const cacheRes1 = SimplestCache.select("cache");
+            const fsRes1 = SimplestFS.select("fs");
+            if(Object.keys(cacheRes1).length !== 3) throw new Error("Error 74:");
+            if(Object.keys(fsRes1).length !== 3) throw new Error("Error 77:");
+            const cacheRes2 = SimplestCache.select("cache");
+            const fsRes2 = SimplestFS.select("fs");
+            if(Object.keys(cacheRes2).length !== 3) throw new Error("Error 94:");
+            if(Object.keys(fsRes2).length !== 3) throw new Error("Error 97:");
+            SimplestCache.delete("cache", cacheId1);
+            SimplestCache.delete("cache", cacheId2);
+            SimplestCache.delete("cache", cacheId3);
+            SimplestFS.delete("fs", fsId4);
+            SimplestFS.delete("fs", fsId5);
+            SimplestFS.delete("fs", fsId6);
             document.getElementById("errores").textContent = "Test passed successfully.";
         } catch (error) {
             document.getElementById("errores").textContent = "Error: " + error.name + "\nMessage: " + error.message + "\nStack: " + error.stack;
